# djangoheads

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Dockerfile  Dockerfile_old  README.md  docker-compose.yml  noxfile.py  pyproject.toml  tox.ini
.github/workflows/: ci-release.yml  run-tests.yml
djangoheads/: apps.py
djangoheads/management/commands/: waiter.py
test_django_project/: __init__.py  celery.py  settings.py
tests/: __django_settings__.py  __setup_django__.py  conftest.py  test_app.py  test_apps.py  test_command_initdjango.py  test_command_waiter.py
