[tool.poetry]
name = "djangoheads"
version = "0.1.0"
description = "Djangoheads is a comprehensive project that includes the most efficient and user-friendly tools for Django development."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
priority = 'supplemental'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
tox = "^4.11.4"
django = "^4.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
use_parentheses = true
ensure_newline_before_comments = true
wrap_length = 120
line_length = 120

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
strict = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "django_settings"

[tool.ruff]
select = ["ALL"]
ignore = [
    "COM812",
    "D104",
    "FA100",
    "ANN101",
    "ANN102",
    "ERA001",
    "RUF001",
    "RUF002",
    "RUF003",
    "D212",
    "D400",
    "D415",
    "D203",
    "D102",
    "D210",
    "DTZ003",
    "D100",
    "D107",
    "FBT",
    "TRY400",
    "TRY003",
    "PT009",
]
exclude = [
    ".git",
    "__pycache__",
    ".venv/*",
    "*.pyc",
    ".mypy_cache",
    ".pytest_cache",
    "setup.py",
]
line-length = 120
force-exclude = true
dummy-variable-rgx = "(?x)(^venv/ | ^venv\\.py$)"
show-fixes = true
show-source = true
target-version = "py38"
